// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI generation for E2E apps > should generate OpenAPI spec for api-gateway that matches snapshot > api-gateway-openapi 1`] = `
{
  "/": {
    "get": {
      "description": "Get basic API information and available services",
      "operationId": "GatewayController_getApiInfo",
      "parameters": [],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ApiInfoDto",
              },
            },
          },
          "description": "API information",
        },
      },
      "summary": "API Information",
      "tags": [
        "gateway",
      ],
    },
  },
  "/api/notifications/stats": {
    "get": {
      "description": "Proxy request to notification service for statistics",
      "operationId": "ProxyController_getNotificationStats",
      "parameters": [],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "type": "object",
              },
            },
          },
          "description": "Notification statistics from notification service",
        },
      },
      "summary": "Get notification stats (proxied)",
      "tags": [
        "proxy",
      ],
    },
  },
  "/api/users/{id}/profile": {
    "get": {
      "description": "Proxy request to user service for user profile",
      "operationId": "ProxyController_getUserProfile",
      "parameters": [
        {
          "description": "User ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "type": "object",
              },
            },
          },
          "description": "User profile data from user service",
        },
      },
      "summary": "Get user profile (proxied)",
      "tags": [
        "proxy",
      ],
    },
  },
  "/health": {
    "get": {
      "description": "Get overall system health status including microservices",
      "operationId": "GatewayController_getHealth",
      "parameters": [],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/HealthCheckDto",
              },
            },
          },
          "description": "System health status",
        },
      },
      "summary": "Health check",
      "tags": [
        "gateway",
      ],
    },
  },
  "/version": {
    "get": {
      "description": "Returns the current API version",
      "operationId": "GatewayController_getVersion",
      "parameters": [],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "buildDate": {
                    "type": "string",
                  },
                  "version": {
                    "type": "string",
                  },
                },
                "required": [
                  "version",
                  "buildDate",
                ],
                "type": "object",
              },
            },
          },
          "description": "API version information",
        },
      },
      "summary": "Get API version",
      "tags": [
        "gateway",
      ],
    },
  },
}
`;

exports[`OpenAPI generation for E2E apps > should generate OpenAPI spec for complex-generics that matches snapshot > complex-generics-openapi 1`] = `
{
  "/articles": {
    "get": {
      "operationId": "ArticleController_findAll",
      "parameters": [
        {
          "description": "Page number",
          "in": "query",
          "name": "page",
          "required": false,
          "schema": {
            "type": "number",
          },
        },
        {
          "description": "Items per page",
          "in": "query",
          "name": "pageSize",
          "required": false,
          "schema": {
            "type": "number",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PaginatedResponse<ArticleEntity>",
              },
            },
          },
          "description": "Paginated list of articles",
        },
      },
      "summary": "Get paginated articles",
      "tags": [
        "Articles",
      ],
    },
    "post": {
      "operationId": "ArticleController_create",
      "parameters": [],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/CreateArticleDto",
            },
          },
        },
        "description": "Request body parameter: _dto",
        "required": true,
      },
      "responses": {
        "201": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ApiResponseDto<ArticleEntity>",
              },
            },
          },
          "description": "Article created",
        },
      },
      "summary": "Create a new article",
      "tags": [
        "Articles",
      ],
    },
  },
  "/articles/{id}": {
    "delete": {
      "operationId": "ArticleController_remove",
      "parameters": [
        {
          "description": "Article ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "204": {
          "description": "Article deleted",
        },
        "404": {
          "description": "Article not found",
        },
      },
      "summary": "Delete an article",
      "tags": [
        "Articles",
      ],
    },
    "get": {
      "operationId": "ArticleController_findOne",
      "parameters": [
        {
          "description": "Article ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ApiResponseDto<ArticleEntity>",
              },
            },
          },
          "description": "Article found",
        },
        "404": {
          "description": "Article not found",
        },
      },
      "summary": "Get article by ID",
      "tags": [
        "Articles",
      ],
    },
    "put": {
      "operationId": "ArticleController_update",
      "parameters": [
        {
          "description": "Article ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/UpdateArticleDto",
            },
          },
        },
        "description": "Request body parameter: _dto",
        "required": true,
      },
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ApiResponseDto<ArticleEntity>",
              },
            },
          },
          "description": "Article updated",
        },
      },
      "summary": "Update an article",
      "tags": [
        "Articles",
      ],
    },
  },
  "/articles/{id}/with-author": {
    "get": {
      "operationId": "ArticleController_findWithAuthor",
      "parameters": [
        {
          "description": "Article ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ArticleWithAuthor",
              },
            },
          },
          "description": "Article with author details",
        },
      },
      "summary": "Get article with embedded author",
      "tags": [
        "Articles",
      ],
    },
  },
  "/articles/{id}/with-comments": {
    "get": {
      "operationId": "ArticleController_findWithComments",
      "parameters": [
        {
          "description": "Article ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ArticleWithComments",
              },
            },
          },
          "description": "Article with comments",
        },
      },
      "summary": "Get article with all comments",
      "tags": [
        "Articles",
      ],
    },
  },
  "/batch/articles": {
    "delete": {
      "operationId": "BatchController_batchDeleteArticles",
      "parameters": [],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
          },
        },
        "description": "Request body parameter: _ids",
        "required": true,
      },
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/BatchResult<string>",
              },
            },
          },
          "description": "Batch deletion result",
        },
      },
      "summary": "Batch delete articles",
      "tags": [
        "Batch",
      ],
    },
    "post": {
      "operationId": "BatchController_batchCreateArticles",
      "parameters": [],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "items": {
                "$ref": "#/components/schemas/CreateArticleDto",
              },
              "type": "array",
            },
          },
        },
        "description": "Request body parameter: _articles",
        "required": true,
      },
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/BatchResult<ArticleEntity>",
              },
            },
          },
          "description": "Batch operation result",
        },
      },
      "summary": "Batch create articles",
      "tags": [
        "Batch",
      ],
    },
  },
  "/comments": {
    "get": {
      "operationId": "CommentController_findAll",
      "parameters": [
        {
          "description": "Filter by article",
          "in": "query",
          "name": "articleId",
          "required": false,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PaginatedResponse<CommentEntity>",
              },
            },
          },
          "description": "Paginated list of comments",
        },
      },
      "summary": "Get paginated comments",
      "tags": [
        "Comments",
      ],
    },
  },
  "/comments/{id}": {
    "get": {
      "operationId": "CommentController_findOne",
      "parameters": [
        {
          "description": "Comment ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ApiResponseDto<CommentEntity>",
              },
            },
          },
          "description": "Comment found",
        },
      },
      "summary": "Get comment by ID",
      "tags": [
        "Comments",
      ],
    },
  },
  "/filters": {
    "get": {
      "operationId": "FilterController_getFilters",
      "parameters": [],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/FilterRules",
              },
            },
          },
          "description": "Current filter configuration",
        },
      },
      "summary": "Get current filter rules",
      "tags": [
        "Filters",
      ],
    },
    "post": {
      "operationId": "FilterController_updateFilters",
      "parameters": [],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/FilterRules",
            },
          },
        },
        "description": "Request body parameter: _rules",
        "required": true,
      },
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/FilterRules",
              },
            },
          },
          "description": "Updated filter configuration",
        },
      },
      "summary": "Update filter rules",
      "tags": [
        "Filters",
      ],
    },
  },
  "/search": {
    "get": {
      "operationId": "SearchController_search",
      "parameters": [
        {
          "description": "Search query",
          "in": "query",
          "name": "q",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
        {
          "description": "Filter by entity type",
          "in": "query",
          "name": "type",
          "required": false,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "items": {
                  "$ref": "#/components/schemas/SearchResult",
                },
                "type": "array",
              },
            },
          },
          "description": "Search results",
        },
      },
      "summary": "Global search across all entities",
      "tags": [
        "Search",
      ],
    },
  },
  "/users": {
    "get": {
      "operationId": "UserController_findAll",
      "parameters": [],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PaginatedResponse<UserEntity>",
              },
            },
          },
          "description": "Paginated list of users",
        },
      },
      "summary": "Get paginated users",
      "tags": [
        "Users",
      ],
    },
  },
  "/users/{id}": {
    "get": {
      "operationId": "UserController_findOne",
      "parameters": [
        {
          "description": "User ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ApiResponseDto<UserEntity>",
              },
            },
          },
          "description": "User found",
        },
      },
      "summary": "Get user by ID",
      "tags": [
        "Users",
      ],
    },
  },
  "/users/{id}/articles": {
    "get": {
      "operationId": "UserController_getUserArticles",
      "parameters": [
        {
          "description": "User ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PaginatedArticlesWithAuthors",
              },
            },
          },
          "description": "Paginated articles by this user",
        },
      },
      "summary": "Get user articles with author info",
      "tags": [
        "Users",
      ],
    },
  },
  "/users/{id}/settings": {
    "get": {
      "operationId": "UserController_getSettings",
      "parameters": [
        {
          "description": "User ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UserSettings",
              },
            },
          },
          "description": "User settings",
        },
      },
      "summary": "Get user settings",
      "tags": [
        "Users",
      ],
    },
    "put": {
      "operationId": "UserController_updateSettings",
      "parameters": [
        {
          "description": "User ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/UserSettings",
            },
          },
        },
        "description": "Request body parameter: _settings",
        "required": true,
      },
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ApiResponseDto<UserSettings>",
              },
            },
          },
          "description": "Settings updated",
        },
      },
      "summary": "Update user settings",
      "tags": [
        "Users",
      ],
    },
  },
}
`;

exports[`OpenAPI generation for E2E apps > should generate OpenAPI spec for monolith-todo-app that matches snapshot > monolith-todo-app-openapi 1`] = `
{
  "/api/users": {
    "get": {
      "operationId": "UserController_findAll",
      "parameters": [
        {
          "description": "Search users by name or email",
          "in": "query",
          "name": "search",
          "required": false,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "items": {
                  "$ref": "#/components/schemas/UserDto",
                },
                "type": "array",
              },
            },
          },
          "description": "List of users",
        },
      },
      "summary": "Get all users",
      "tags": [
        "users",
      ],
    },
    "post": {
      "operationId": "UserController_create",
      "parameters": [],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/CreateUserDto",
            },
          },
        },
        "description": "Request body parameter: createUserDto",
        "required": true,
      },
      "responses": {
        "201": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UserDto",
              },
            },
          },
          "description": "The created user",
        },
      },
      "summary": "Create a new user",
      "tags": [
        "users",
      ],
    },
  },
  "/api/users/{id}": {
    "get": {
      "operationId": "UserController_findOne",
      "parameters": [
        {
          "description": "User ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UserDto",
              },
            },
          },
          "description": "The user",
        },
        "404": {
          "description": "User not found",
        },
      },
      "summary": "Get a user by ID",
      "tags": [
        "users",
      ],
    },
  },
  "/todos": {
    "get": {
      "operationId": "TodoController_findAll",
      "parameters": [
        {
          "description": "Filter todos by completion status",
          "in": "query",
          "name": "completed",
          "required": false,
          "schema": {
            "type": "boolean",
          },
        },
        {
          "description": "Filter todos by priority",
          "in": "query",
          "name": "priority",
          "required": false,
          "schema": {
            "oneOf": [
              {
                "type": "object",
              },
              {
                "type": "object",
              },
              {
                "type": "object",
              },
            ],
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "items": {
                  "$ref": "#/components/schemas/TodoDto",
                },
                "type": "array",
              },
            },
          },
          "description": "List of todos",
        },
      },
      "summary": "Get all todos",
      "tags": [
        "todos",
      ],
    },
    "post": {
      "operationId": "TodoController_create",
      "parameters": [],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/CreateTodoDto",
            },
          },
        },
        "description": "Request body parameter: createTodoDto",
        "required": true,
      },
      "responses": {
        "201": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/TodoDto",
              },
            },
          },
          "description": "The created todo",
        },
      },
      "summary": "Create a new todo",
      "tags": [
        "todos",
      ],
    },
  },
  "/todos/{id}": {
    "delete": {
      "operationId": "TodoController_remove",
      "parameters": [
        {
          "description": "Todo ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "204": {
          "description": "Todo deleted successfully",
        },
        "404": {
          "description": "Todo not found",
        },
      },
      "summary": "Delete a todo",
      "tags": [
        "todos",
      ],
    },
    "get": {
      "operationId": "TodoController_findOne",
      "parameters": [
        {
          "description": "Todo ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/TodoDto",
              },
            },
          },
          "description": "The todo",
        },
        "404": {
          "description": "Todo not found",
        },
      },
      "summary": "Get a todo by ID",
      "tags": [
        "todos",
      ],
    },
    "put": {
      "operationId": "TodoController_update",
      "parameters": [
        {
          "description": "Todo ID",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/UpdateTodoDto",
            },
          },
        },
        "description": "Request body parameter: updateTodoDto",
        "required": true,
      },
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/TodoDto",
              },
            },
          },
          "description": "The updated todo",
        },
        "404": {
          "description": "Todo not found",
        },
      },
      "summary": "Update a todo",
      "tags": [
        "todos",
      ],
    },
  },
}
`;

exports[`OpenAPI generation for E2E apps > should generate OpenAPI spec for notification-service that matches snapshot > notification-service-openapi 1`] = `
{
  "/notifications": {
    "get": {
      "description": "Retrieve notifications with optional filtering",
      "operationId": "NotificationController_findAll",
      "parameters": [
        {
          "description": "Filter by user ID",
          "in": "query",
          "name": "userId",
          "required": false,
          "schema": {
            "type": "string",
          },
        },
        {
          "description": "Filter by notification type",
          "in": "query",
          "name": "type",
          "required": false,
          "schema": {
            "type": "string",
          },
        },
        {
          "description": "Filter by notification status",
          "in": "query",
          "name": "status",
          "required": false,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "items": {
                  "$ref": "#/components/schemas/NotificationDto",
                },
                "type": "array",
              },
            },
          },
          "description": "List of notifications",
        },
      },
      "summary": "Get notifications",
      "tags": [
        "notifications",
      ],
    },
    "post": {
      "description": "Create and send a new notification",
      "operationId": "NotificationController_create",
      "parameters": [],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/CreateNotificationDto",
            },
          },
        },
        "description": "Request body parameter: createNotificationDto",
        "required": true,
      },
      "responses": {
        "201": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/NotificationDto",
              },
            },
          },
          "description": "Notification created and queued",
        },
      },
      "summary": "Send notification",
      "tags": [
        "notifications",
      ],
    },
  },
  "/notifications/stats": {
    "get": {
      "description": "Retrieve overall notification delivery statistics",
      "operationId": "NotificationController_getStats",
      "parameters": [],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/NotificationStatsDto",
              },
            },
          },
          "description": "Notification statistics",
        },
      },
      "summary": "Get notification statistics",
      "tags": [
        "notifications",
      ],
    },
  },
  "/notifications/{id}": {
    "get": {
      "description": "Retrieve a specific notification by its identifier",
      "operationId": "NotificationController_findOne",
      "parameters": [
        {
          "description": "Notification unique identifier",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/NotificationDto",
              },
            },
          },
          "description": "Notification details",
        },
        "404": {
          "description": "Notification not found",
        },
      },
      "summary": "Get notification by ID",
      "tags": [
        "notifications",
      ],
    },
  },
}
`;

exports[`OpenAPI generation for E2E apps > should generate OpenAPI spec for user-service that matches snapshot > user-service-openapi 1`] = `
{
  "/users": {
    "get": {
      "description": "Retrieve a list of users with optional filtering by role and active status",
      "operationId": "UserController_findAll",
      "parameters": [
        {
          "description": "Filter users by role",
          "in": "query",
          "name": "role",
          "required": false,
          "schema": {
            "oneOf": [
              {
                "type": "object",
              },
              {
                "type": "object",
              },
              {
                "type": "object",
              },
            ],
          },
        },
        {
          "description": "Filter users by active status",
          "in": "query",
          "name": "isActive",
          "required": false,
          "schema": {
            "type": "boolean",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "items": {
                  "$ref": "#/components/schemas/UserDto",
                },
                "type": "array",
              },
            },
          },
          "description": "List of users",
        },
      },
      "summary": "Get all users",
      "tags": [
        "users",
      ],
    },
    "post": {
      "description": "Create a new user account in the system",
      "operationId": "UserController_create",
      "parameters": [],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/CreateUserDto",
            },
          },
        },
        "description": "Request body parameter: createUserDto",
        "required": true,
      },
      "responses": {
        "201": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UserDto",
              },
            },
          },
          "description": "User created successfully",
        },
        "400": {
          "description": "Invalid user data provided",
        },
      },
      "summary": "Create new user",
      "tags": [
        "users",
      ],
    },
  },
  "/users/{id}": {
    "delete": {
      "description": "Remove a user from the system",
      "operationId": "UserController_remove",
      "parameters": [
        {
          "description": "User unique identifier",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "204": {
          "description": "User deleted successfully",
        },
        "404": {
          "description": "User not found",
        },
      },
      "summary": "Delete user",
      "tags": [
        "users",
      ],
    },
    "get": {
      "description": "Retrieve a specific user by their unique identifier",
      "operationId": "UserController_findOne",
      "parameters": [
        {
          "description": "User unique identifier",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UserDto",
              },
            },
          },
          "description": "User details",
        },
        "404": {
          "description": "User not found",
        },
      },
      "summary": "Get user by ID",
      "tags": [
        "users",
      ],
    },
    "put": {
      "description": "Update an existing user's information",
      "operationId": "UserController_update",
      "parameters": [
        {
          "description": "User unique identifier",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/UpdateUserDto",
            },
          },
        },
        "description": "Request body parameter: updateUserDto",
        "required": true,
      },
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UserDto",
              },
            },
          },
          "description": "User updated successfully",
        },
        "404": {
          "description": "User not found",
        },
      },
      "summary": "Update user",
      "tags": [
        "users",
      ],
    },
  },
  "/users/{id}/profile": {
    "get": {
      "description": "Retrieve complete user profile including preferences and last login",
      "operationId": "UserController_getProfile",
      "parameters": [
        {
          "description": "User unique identifier",
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UserProfileDto",
              },
            },
          },
          "description": "User profile with preferences",
        },
        "404": {
          "description": "User not found",
        },
      },
      "summary": "Get user profile",
      "tags": [
        "users",
      ],
    },
  },
}
`;
